--- a/Cargo.toml
+++ b/Cargo.toml
@@ -40,3 +40,4 @@ bevy_tweening = { version = "0.7", default-features = false, features = [
 rand = "0.8"
 serde = { version = "1", features = ["derive"] }
 serde_json = { version = "1" }
+smallvec = "1.10"
