--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -10,6 +10,7 @@ crate-type = ["staticlib", "rlib", "cdylib"]
 [features]
 android_shared_stdcxx = ["bevy/android_shared_stdcxx"]
 dynamic_linking = ["bevy/dynamic_linking"]
+steam = ["dep:bevy-steamworks"]
 
 [dependencies]
 anyhow = "1"
@@ -31,6 +32,7 @@ bevy = { version = "0.10", default-features = false, features = [
     "wayland",
     "x11",
 ] }
+bevy-steamworks = { optional = true, version = "0.7" }
 bevy_tweening = { version = "0.7", default-features = false, features = [
     "bevy_asset",
     "bevy_sprite",
