--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,4 +21,7 @@ identifier = "nl.couch-chilis.sudoku-pi"
 sudoku-lib = { path = "lib", features = ["steam"] }
 
 [patch.crates-io]
+#bevy = { path = "../bevy" }
+bevy_tweening = { path = "../bevy_tweening" }
 bevy-steamworks = { path = "../bevy-steamworks" }
+#winit = { path = "../winit" }
