Improved responsiveness and toggle visuals

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -18,7 +18,7 @@ opt-level = 3
 identifier = "nl.couch-chilis.sudoku-pi"
 
 [dependencies]
-sudoku-lib = { path = "lib", features = ["steam"] }
+sudoku-lib = { path = "lib", features = ["dynamic_linking", "steam"] }
 
 [patch.crates-io]
 bevy-steamworks = { path = "../bevy-steamworks" }
