--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,6 +22,10 @@ sudoku-lib = { path = "lib" }
 
 [patch.crates-io]
 bevy = { path = "../bevy" }
+bevy_app = { path = "../bevy/crates/bevy_app" }
+bevy_ecs = { path = "../bevy/crates/bevy_ecs" }
+bevy_log = { path = "../bevy/crates/bevy_log" }
+bevy_utils = { path = "../bevy/crates/bevy_utils" }
 #bevy_tweening = { path = "../bevy_tweening" }
 #bevy-steamworks = { path = "../bevy-steamworks" }
 winit = { path = "../winit" }
