--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -13,7 +13,7 @@ dynamic_linking = ["bevy/dynamic_linking"]
 
 [dependencies]
 anyhow = "1"
-bevy = { version = "0.12.0-dev", default-features = false, features = [
+bevy = { version = "0.12", default-features = false, features = [
     "animation",
     "bevy_asset",
     "bevy_gilrs",
@@ -30,7 +30,7 @@ bevy = { version = "0.12.0-dev", default-features = false, features = [
     "wayland",
     "x11",
 ] }
-#bevy_framepace = { version = "0.13" }
+bevy_framepace = { version = "0.14" }
 #bevy-steamworks = { optional = true, version = "0.8" }
 bevy_tweening = { version = "0.8", default-features = false, features = [
     "bevy_asset",
