--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -13,7 +13,7 @@ dynamic_linking = ["bevy/dynamic_linking"]
 
 [dependencies]
 anyhow = "1"
-bevy = { version = "0.13", default-features = false, features = [
+bevy = { version = "0.14", default-features = false, features = [
     "animation",
     "bevy_asset",
     "bevy_gilrs",
@@ -24,15 +24,16 @@ bevy = { version = "0.13", default-features = false, features = [
     "bevy_gltf",
     "bevy_render",
     "bevy_sprite",
+    "bevy_state",
     "bevy_text",
     "jpeg",
     "png",
     "wayland",
     "x11",
 ] }
-bevy_framepace = { version = "0.15" }
+bevy_framepace = { version = "0.17" }
 #bevy-steamworks = { optional = true, version = "0.8" }
-bevy_tweening = { version = "0.10", default-features = false, features = [
+bevy_tweening = { version = "0.11", default-features = false, features = [
     "bevy_asset",
     "bevy_sprite",
     "bevy_text",
